@@ -59,12 +59,12 @@ pkginc_HEADERS = \
 	argv.h envvar.h fts.h mire.h rpmbc.h rpmcb.h rpmdav.h rpmgc.h \
 	rpmhash.h rpmio.h rpmio-stub.h rpmku.h rpmlog.h rpmmacro.h rpmmg.h \
 	rpmnss.h rpmpgp.h rpmsq.h rpmssl.h rpmsw.h rpmurl.h rpmxar.h \
-	stringbuf.h ugid.h rpmuuid.h yarn.h
+	stringbuf.h ugid.h rpmuuid.h rpmzlog.h yarn.h
 noinst_HEADERS = \
 	ar.h cpio.h crc.h fnmatch.h glob.h iosm.h \
 	md2.h md4.h poptIO.h rmd128.h rmd160.h rmd256.h rmd320.h sha224.h \
 	salsa10.h salsa20.h tar.h tiger.h \
-	rpmhook.h rpmio_internal.h rpmlua.h rpmbz.h rpmzlog.h
+	rpmhook.h rpmio_internal.h rpmlua.h rpmbz.h
 
 usrlibdir = $(libdir)
 usrlib_LTLIBRARIES = librpmio.la
